tests/fixtures/invalid/pow_set_float_float.py
# Cannot call pow() with Set[int], Float, Float
x = pow({1, 2, 3}, 1.0, 1.0)
